--- a/todo
+++ b/todo
@@ -2,4 +2,4 @@ fix shitty screen saver logic
 handle aerc creds semi competently
 include browser config 
 include app launcher
-automatic monitor handling?
+automatic monitor recognition?
